--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,10 @@
 * {
   box-sizing: border-box;
 }
-
 :root {
-  --font-family: 'Montserrat', sans-serif;
+  --text-p: 400 16px / 1.5 'Montserrat', sans-serif;
+  --text-h: 600 24px / 1.33 'Montserrat', sans-serif;
+  --text-btn: 500 16px / 1.5 'Montserrat', sans-serif;
 }
 
 body {
@@ -14,34 +15,35 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
+  line-height: 1.5;
 }
-
+a {
+  text-decoration: none;
+  color: inherit;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 h1,
 h2,
 h3,
 h4,
 h5,
 p {
+  letter-spacing: 0.04em;
+  color: #2e2f42;
   margin: 0;
 }
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
-
 button {
-  border: none;
-  background-color: transparent;
-  padding: 0;
   cursor: pointer;
+  border: none;
 }
 
 /* ======= task-1 ======= */
@@ -49,14 +51,12 @@ button {
   border-radius: 8px;
   padding: 24px;
   width: 440px;
-  /* height: 888px; */
   background: #fff;
 }
 .item {
   border-radius: 8px;
   padding: 16px;
   width: 392px;
-  /* height: 264px; */
   background: #f6f6fe;
   margin-bottom: 24px;
 }
@@ -64,19 +64,13 @@ button {
   margin-bottom: 0;
 }
 .item h2 {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 1.33;
+  font: var(--text-h);
   letter-spacing: 0.04em;
   color: #2e2f42;
   margin-bottom: 16px;
 }
 .item ul li {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
+  font: var(--text-p);
   letter-spacing: 0.04em;
   color: #2e2f42;
   border: 1px solid #808080;
@@ -123,10 +117,7 @@ button {
   background: #fff;
 }
 #name-input {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
+  font: var(--text-p);
   letter-spacing: 0.04em;
   color: #2e2f42;
   width: 360px;
@@ -137,10 +128,7 @@ button {
   margin-bottom: 16px;
 }
 .your-name .title {
-  font-family: var(--font-family);
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 1.33;
+  font: var(--text-h);
   letter-spacing: 0.04em;
   color: #2e2f42;
 }
@@ -160,10 +148,7 @@ button {
   margin-bottom: 16px;
 }
 .input-field {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
+  font: var(--text-p);
   letter-spacing: 0.04em;
   color: #2e2f42;
   padding: 8px 16px;
@@ -179,10 +164,7 @@ button {
   border: 1px solid #808080;
 }
 .label-text {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
+  font: var(--text-p);
   letter-spacing: 0.04em;
   color: #2e2f42;
 }
@@ -190,10 +172,7 @@ button {
   border-radius: 8px;
   padding: 8px 16px;
   background: #4e75ff;
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
+  font: var(--text-btn);
   letter-spacing: 0.04em;
   color: #fff;
 }
@@ -215,18 +194,13 @@ button {
   justify-content: space-between;
 }
 .widget p {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
+  font: var(--text-p);
   letter-spacing: 0.04em;
   color: #2e2f42;
+  text-align: center;
 }
 .change-color {
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
+  font: var(--text-btn);
   letter-spacing: 0.04em;
   color: #fff;
   border-radius: 8px;
